# req-analyst-assistant

./: .gitignore  README.md  pyproject.toml  setup.py  streamlit_app.py
.github/workflows/: ci.yml
analysis/: heuristics.py  index.py  llm_providers.py  model_extractor.py  normalize_requirements.py  qa.py  rewrites.py  summarize_requirements.py  testgen.py  traceability.py  utils.py
ingestion/: loader.py
req_analyst_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app.py  test_heuristics.py  test_index.py  test_ingestion.py  test_llm_providers.py  test_loader.py  test_model_extractor.py  test_normalize_requirements.py  test_qa.py  test_rewrites.py  test_testgen.py  test_traceability.py  test_utils.py
ui/: app.py  styles.css  test_input.py
